# rikaigu

./: .editorconfig  .flake8  .gitignore  .gitmodules  LICENSE.md  Makefile  NEWS.md  README.md  TODO.md  download.sh  js-beautify.config  manifest.json
cpp/: Makefile  api.cpp  api.h  crf.cpp  crf.h  deinflector.cpp  deinflector.h  dentry.cpp  dentry.h  dictionaries.cpp  dictionaries.h  html_render.cpp  utils.cpp  utils.h
cpp/client/: api.cpp  api.h  crf.cpp  deinflector.cpp  deinflector.h  dentry.cpp  dentry.h  dictionaries.cpp  dictionaries.h  html_render.cpp  html_render.h  utils.cpp  utils.h  word_types.cpp  word_types.h
cpp/crfxx/: encode.h
cpp/tools/: common.cpp  common.h  lbfgs.h  test.cpp  train.cpp
crfxx/: CMakeLists.txt
crfxx/crfxx/: CMakeLists.txt  encode.cpp  encode.h  extract-xgboost.cpp  lbfgs.cpp  lbfgs.h  main.cpp  test-xgboost.cpp  utf16.cpp  utf16.h
crfxx/include/: api.h
crfxx/include/crfxx/: api.h
crfxx/src/: api.cpp  common.hpp  encode.cpp  encode.h  neural.cpp  test.cpp  train.cpp  utf16.h  xgboost-common.hpp
css/: options.css  popup-black.css  popup-blue.css  popup-common.css  popup-lightblue.css  popup-yellow.css
data/: corpus.py  dictionary.py  expressions.dat.in  expressions.py  extract-expressions.py  freqs.py  generate-test.py  index.py  jawiktionary.py  prepare-dict.py  prepare-freqs.py  prepare-freqs2.py  prepare-segmentation-corpus.py  romaji.py  utils.py  wasm_generator.py
html/: background.html  options.html  scratchpad.html  test.html  test2.html  upload.html
js/: background.js  config.js  deinflector.js  entry.js  highlight.js  idb.js  options.js  popup.js  rikaicontent.js  rikaigu.js  selection.js  upload.js
ml/: prepare-data.py  script.py
segmentation/: Makefile  char-glove.sh  feature_extractor.hpp  filter_feature_index.cpp  filter_feature_index.h  prepare-corpus.py  to-crfpp.py  train_feature_index.cpp  train_feature_index.h  trainer.cpp  xgboost.conf
segmentation/models/: model2.desc
wasm/: Makefile  cflags
wasm/src/: api.c  builtins.h  decompress.c  decompress.h  deinflect.c  deinflect.h  dentry.c  dentry.h  dictionaries.c  dictionaries.h  html_render.c  html_render.h  imports.h  imports.txt  index.c  index.h  libc.c  libc.h  names_types_mapping.c  names_types_mapping.h  review_list.c  review_list.h  state.c  state.h  utf.c  utf.h  vardata_array.c  vardata_array.h  word_results.c  word_results.h
wasm/tests/: decompress.c  dentry.c  fake-memory.h  index.c  index.polyfill.c  libc.c  polyfill.c  state.c  test.py  utf.c
